--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-Django >= 2.0.6
+dj-database-url==0.5.0
+Django==2.2.2
+gunicorn==19.9.0
+pep8==1.7.1
+psycopg2==2.8.3
+pytz==2019.1
+sqlparse==0.3.0
+whitenoise==4.1.2
