--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 dj-database-url==0.5.0
 Django==2.2.2
+django-crispy-forms==1.7.2
 gunicorn==19.9.0
 pep8==1.7.1
+Pillow==6.1.0
 psycopg2==2.8.3
 pytz==2019.1
 sqlparse==0.3.0
