--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ dj-database-url==0.5.0
 Django==2.2.2
 django-crispy-forms==1.7.2
 gunicorn==19.9.0
+mysqlclient==1.4.2.post1
 pep8==1.7.1
 Pillow==6.1.0
 psycopg2==2.8.3
